# adapters/target-ems-scada-http/src/capabilities.rs
@@ -75,6 +75,11 @@ pub(crate) const IMPLEMENTED_RESOURCES: &[IntegrationResource] = &[
         operations: &["read"],
     },
     IntegrationResource {
+        name: "schemas_v1_9",
+        path: "/bridge/v1/schemas/v1.9/{schema}",
+        operations: &["read"],
+    },
+    IntegrationResource {
         name: "stations",
         path: "/bridge/v1/stations",
         operations: &["read"],
