# adapters/target-ems-scada-http/src/routing.rs
@@ -165,6 +165,10 @@ pub(crate) fn integration_router(state: IntegrationState) -> Router {
             "/bridge/v1/schemas/v1.8/{schema}",
             get(crate::openapi::schema_v1_8),
         )
+        .route(
+            "/bridge/v1/schemas/v1.9/{schema}",
+            get(crate::openapi::schema_v1_9),
+        )
         .route("/bridge/v1/events", get(crate::events::events))
         .route("/bridge/v1/stations", get(stations::stations))
         .route("/bridge/v1/stations/{station_id}", get(stations::station))
